--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>QrCodeGenerater</title>
     <link rel="stylesheet" href="style.css">
+    
 </head>
 <body>
     <section id="qrcode">
         <h1>QR CODE GENERATOR</h1><br>
         <form autocomplete="off" id="inp">
-            <input type="text" id="url" placeholder="Enter Your URL" > <br><br>
-            <input type="submit" value="Generate QR" class="btn">
+            <input type="text" id="url" placeholder="Enter Your URL" /> <br><br>
+            <input type="submit" value="Generate QR" class="btn"/>
         </form>
         <br>
-        <img src="" alt="QR">
+        <img src="" alt="QR"/>
     </section>
-
 
     <script src="scrpit.js"></script>
 </body>
